fix: delete user
